$Id: ChangeLog,v 1.501 2009/01/04 21:07:18 olereinhardt Exp $


2009-01-04  Ole Reinhardt <ole.reinhardt@thermotemp.de>

        * pro/Makefile: Fixed Makefile. Thanks to Uwe Bonnes for this patch
        * configure.ac: Checks and warns about an empty $LUA_HEADERS 
                        also looks in more places. Thanks again to Uwe Bonnes
        * pro/rfctime.c: Fixed time parsing in RfcTimeParse
                         Thanks to Michael Fischer!

2009-01-04  Thiago A. Correa <thiago.correa@gmail.com>
        
	* tools/nutconf/bldoptdlg.h,
	* tools/nutconf/bldoptdlg.h:
	      Fix behavior of "Browse" buttons in page "Build"
	      of Settings dialog.
	      
2009-01-04  Thiago A. Correa <thiago.correa@gmail.com>
        
	* tools/nutconf/nutcomponent.c,
	* tools/nutconf/nutconfdoc.cpp:
	      Add .svn to ignore list when copying files and
	      reduce some duplicated code.
	      
2009-01-04  Thiago A. Correa <thiago.correa@gmail.com>
        
	* tools/nutconf/nutcomponent.c:
	      Update lua initialization to conform to lua 5.x API change.
	      This change should still be compatible with 4.x.

2009-01-04  Thiago A. Correa <thiago.correa@gmail.com>
        
	* tools/nutconf/mainframe.cpp,
	* tools/nutconf/nutconfdoc.cpp:
	      Allow nutconf to build with _UNICODE under Win32. 

2008-12-24  Thiago A. Correa <thiago.correa@gmail.com>
        
	* conf/dev/dev.nut, 
          Improve Serial Bit Bang drivers dependency check
          in nutconf.

2008-12-19  Ole Reinhardt <ole.reinhardt@thermotemp.de>
        
	* arch/arm/dev/gpioa_at91.c, 
	  arch/arm/dev/gpiob_at91.c, 
	  arch/arm/dev/gpioc_at91.c:
          Fixed irq enable / disable bug  

2008-11-12  Harald Kipp  <harald.kipp@egnite.de>

	* conf/arch/arm.nut, dev/at45db.c: Enable DataFlash support
	for EIR board.


2008-10-26  Ole Reinhardt <ole.reinhardt@thermotemp.de>
	* tools/crurom/crurom.c: Added .svn to the list of directories to   
          ignore when creating urom.c
